# aviacao_fat_corte_playwright

./: .gitignore
playwright/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.coordinator  README.md  alembic.ini  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  settings.py
playwright/.github/workflows/: ci-cd.yml
playwright/actions/: __init__.py  base.py  click_text.py  keyboard.py  login.py  misc.py  registry.py  search_routine.py  wait_screen.py
playwright/application/: __init__.py
playwright/application/ports/: __init__.py  job_dispatcher_port.py  screen_handler_port.py  session_port.py
playwright/application/use_cases/: __init__.py  get_job_status_use_case.py  submit_job_use_case.py  workflow_runner_use_case.py
playwright/docs/: spec_driven_inicial
playwright/domain/: __init__.py
playwright/domain/entities/: __init__.py  job.py  workflow.py
playwright/domain/repositories/: __init__.py  job_repository.py  workflow_spec_repository.py
playwright/domain/services/: __init__.py  state_machine.py  workflow_execution_service.py
playwright/domain/value_objects/: __init__.py  job_status.py  screen_region.py  step_result.py
playwright/infrastructure/: __init__.py
playwright/infrastructure/browser/: __init__.py  playwright_session.py
playwright/infrastructure/health/: __init__.py  healthcheck.py
playwright/infrastructure/messaging/: __init__.py  celery_dispatcher.py
playwright/infrastructure/observability/: __init__.py  metrics.py
playwright/infrastructure/persistence/: __init__.py  models.py  postgres_job_repository.py  sqlite_job_repository.py
playwright/infrastructure/screens/: __init__.py  base_screen_handler.py  registry.py
playwright/infrastructure/security/: __init__.py  auth_service.py  dependencies.py
playwright/infrastructure/specs/: __init__.py  yaml_workflow_spec_repository.py
playwright/infrastructure/vision/: __init__.py  ocr_engine.py  screenshot_service.py
playwright/migrations/: env.py
playwright/presentation/api/: exception_handlers.py  main.py  routes.py  schemas.py
playwright/scripts/: init_db.py  manage_api_keys.py  run_local.py
playwright/specs/actions/: search_routine.yaml
playwright/specs/screens/: menu_principal.yaml  tela_gsfat.yaml
playwright/specs/workflows/: faturar_pedido.yaml
playwright/tests/: conftest.py
playwright/tests/integration/: test_api_routes.py
playwright/tests/unit/application/: test_get_job_status_use_case.py  test_submit_job_use_case.py
playwright/tests/unit/domain/: test_job.py  test_state_machine.py  test_workflow_execution_service.py
playwright/workers/: celery_app.py  job_worker.py  worker.yaml
