[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aviacao-fat-corte-playwright"
version = "0.1.0"
description = "Sistema de automação de faturamento com Playwright"
requires-python = ">=3.12"
readme = "README.md"

[tool.ruff]
# Linha máxima de 100 caracteres
line-length = 100
target-version = "py312"

# Incluir diretórios
include = ["*.py", "*.pyi"]

# Excluir diretórios
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "logs",
    "screenshots",
]

[tool.ruff.lint]
# Regras habilitadas
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]

# Regras ignoradas
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

# Permitir autofix para regras específicas
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Testes podem ter imports não utilizados e asserts
"tests/*" = ["F401", "F811"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["actions", "application", "domain", "infrastructure", "presentation", "workers"]

[tool.ruff.format]
# Usar aspas duplas
quote-style = "double"
# Usar trailing commas
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["paddleocr.*", "paddle.*", "cv2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
